[project]
name = "transportcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "environ>=1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
    "ruff>=0.11.5",
    "selenium>=4.31.0",
]
